--- a/App.config
+++ b/App.config
@@ -17,7 +17,7 @@
   
     <connectionStrings>
       <add name="MinhaConexao" 
-           connectionString="Data Source=DESKTOP-JH0T0R2\SQLEXPRESS; Initial Catalog=meuNovoBanco; Integrated Security=True" 
+           connectionString="Data Source=Nome-da-maquina\SQLEXPRESS; Initial Catalog=meuNovoBanco; Integrated Security=True" 
            providerName="System.Data.SqlClient"/>
     </connectionStrings>
 
